First part of .NET 10 migration
